[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://Assets/TileSets/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/TileSets/middleground-no-fungus.png" type="Texture" id=3]
[ext_resource path="res://Assets/TileSets/tilesets.png" type="Texture" id=4]
[ext_resource path="res://Assets/Audio/Metal (Chromatic, Electronic).wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/heart pixel art 16x16.png" type="Texture" id=6]
[ext_resource path="res://Assets/Power_template2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fighting Spirit 2.ttf" type="DynamicFontData" id=8]

[sub_resource type="ConvexPolygonShape2D" id=54]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=51]
points = PoolVector2Array( 0, 16, 16, 16, 16, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=53]
points = PoolVector2Array( 0, 16, 16, 16, 16, 32, 0, 32 )

[sub_resource type="TileSet" id=52]
0/name = "tilesets.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 208, 144, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 54 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tilesets.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 96, 16, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 51 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tilesets.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 96, 16, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 53 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="DynamicFont" id=49]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=50]
size = 50
font_data = ExtResource( 8 )

[node name="Arena1" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 621.292 ]
}
player_1_X = 700
player_1_Y = 540
player_2_X = 750
player_2_Y = 540
player_3_X = 800
player_3_Y = 540
player_4_X = 850
player_4_Y = 540

[node name="bg4" type="Sprite" parent="."]
position = Vector2( 763.758, 451.236 )
scale = Vector2( 1.90114, 1.72047 )
texture = ExtResource( 2 )

[node name="bg3" type="Sprite" parent="."]
position = Vector2( 763.758, 451.236 )
scale = Vector2( 1.90114, 1.72047 )
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -1, 0 )
tile_set = SubResource( 52 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -2228286, 1073741827, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 0, 0, 983075, 0, 0, 983076, 0, 0, 983077, 0, 0, 983078, 0, 0, 983079, 0, 0, 983080, 0, 0, 983081, 0, 0, 983082, 0, 0, 983083, 0, 0, 983084, 0, 0, 983085, 0, 0, 983086, 0, 0, 983087, 0, 0, 983088, 0, 0, 983089, 0, 0, 983090, 0, 0, 983091, 0, 0, 983092, 0, 0, 983093, 0, 0, 983094, 0, 0, 983095, 0, 0, 983096, 0, 0, 983097, 0, 0, 983098, 0, 0, 983099, 0, 0, 983100, 0, 0, 983101, 0, 0, 983102, 0, 0, 983103, 0, 0, 983104, 0, 0, 983105, 0, 0, 983106, 0, 0, 983107, 0, 0, 983108, 0, 0, 983109, 0, 0, 1048601, 6, 0, 1048602, 6, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1048618, 0, 0, 1048619, 0, 0, 1048620, 0, 0, 1048621, 0, 0, 1048622, 0, 0, 1048623, 0, 0, 1048624, 0, 0, 1048625, 0, 0, 1048626, 0, 0, 1048627, 0, 0, 1048628, 0, 0, 1048629, 0, 0, 1048630, 0, 0, 1048631, 0, 0, 1048632, 0, 0, 1048633, 0, 0, 1048634, 0, 0, 1048635, 0, 0, 1048636, 0, 0, 1048637, 0, 0, 1048638, 0, 0, 1048639, 0, 0, 1048640, 0, 0, 1048641, 0, 0, 1048642, 0, 0, 1048643, 0, 0, 1048644, 0, 0, 1048645, 0, 0, 1114137, 6, 0, 1114138, 6, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114154, 0, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1114159, 0, 0, 1114160, 0, 0, 1114161, 0, 0, 1114162, 0, 0, 1114163, 0, 0, 1114164, 0, 0, 1114165, 0, 0, 1114166, 0, 0, 1114167, 0, 0, 1114168, 0, 0, 1114169, 0, 0, 1114170, 0, 0, 1114171, 0, 0, 1114172, 0, 0, 1114173, 0, 0, 1114174, 0, 0, 1114175, 0, 0, 1114176, 0, 0, 1114177, 0, 0, 1114178, 0, 0, 1114179, 0, 0, 1114180, 0, 0, 1114181, 0, 0, 1179673, 6, 0, 1179674, 6, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179686, 0, 0, 1179687, 0, 0, 1179688, 0, 0, 1179689, 0, 0, 1179690, 0, 0, 1179691, 0, 0, 1179692, 0, 0, 1179693, 0, 0, 1179694, 0, 0, 1179695, 0, 0, 1179696, 0, 0, 1179697, 0, 0, 1179698, 0, 0, 1179699, 0, 0, 1179700, 0, 0, 1179701, 0, 0, 1179702, 0, 0, 1179703, 0, 0, 1179704, 0, 0, 1179705, 0, 0, 1179706, 0, 0, 1179707, 0, 0, 1179708, 0, 0, 1179709, 0, 0, 1179710, 0, 0, 1179711, 0, 0, 1179712, 0, 0, 1179713, 0, 0, 1179714, 0, 0, 1179715, 0, 0, 1179716, 0, 0, 1179717, 0, 0, 1245209, 6, 0, 1245210, 6, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245221, 0, 0, 1245222, 0, 0, 1245223, 0, 0, 1245224, 0, 0, 1245225, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1245228, 0, 0, 1245229, 0, 0, 1245230, 0, 0, 1245231, 0, 0, 1245232, 0, 0, 1245233, 0, 0, 1245234, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1245237, 0, 0, 1245238, 0, 0, 1245239, 0, 0, 1245240, 0, 0, 1245241, 0, 0, 1245242, 0, 0, 1245243, 0, 0, 1245244, 0, 0, 1245245, 0, 0, 1245246, 0, 0, 1245247, 0, 0, 1245248, 0, 0, 1245249, 0, 0, 1245250, 0, 0, 1245251, 0, 0, 1245252, 0, 0, 1245253, 0, 0, 1310745, 6, 0, 1310746, 6, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310783, 0, 0, 1310784, 0, 0, 1310785, 0, 0, 1310786, 0, 0, 1310787, 0, 0, 1310788, 0, 0, 1310789, 0, 0, 1376281, 6, 0, 1376282, 6, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376319, 0, 0, 1376320, 0, 0, 1376321, 0, 0, 1376322, 0, 0, 1376323, 0, 0, 1376324, 0, 0, 1376325, 0, 0, 1441817, 6, 0, 1441818, 6, 0, 1441819, 0, 0, 1441820, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441855, 0, 0, 1441856, 0, 0, 1441857, 0, 0, 1441858, 0, 0, 1441859, 0, 0, 1441860, 0, 0, 1441861, 0, 0, 1507353, 6, 0, 1507354, 6, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507363, 0, 0, 1507364, 0, 0, 1507365, 0, 0, 1507386, 0, 0, 1507387, 0, 0, 1507388, 0, 0, 1507391, 0, 0, 1507392, 0, 0, 1507393, 0, 0, 1507394, 0, 0, 1507395, 0, 0, 1507396, 0, 0, 1507397, 0, 0, 1572889, 6, 0, 1572890, 6, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572899, 0, 0, 1572914, 1073741866, 0, 1572924, 0, 0, 1572927, 0, 0, 1572928, 0, 0, 1572929, 0, 0, 1572930, 0, 0, 1572931, 0, 0, 1572932, 0, 0, 1572933, 0, 0, 1638425, 6, 0, 1638426, 6, 0, 1638427, 0, 0, 1638428, 0, 0, 1638429, 0, 0, 1638430, 0, 0, 1638431, 0, 0, 1638432, 0, 0, 1638441, 0, 0, 1638442, 0, 0, 1638443, 0, 0, 1638446, 0, 0, 1638447, 0, 0, 1638448, 0, 0, 1638449, 0, 0, 1638452, 0, 0, 1638453, 0, 0, 1638454, 0, 0, 1638463, 0, 0, 1638464, 0, 0, 1638465, 0, 0, 1638466, 0, 0, 1638467, 0, 0, 1638468, 0, 0, 1638469, 0, 0, 1703961, 6, 0, 1703962, 6, 0, 1703963, 0, 0, 1703964, 0, 0, 1703965, 0, 0, 1703966, 0, 0, 1703967, 0, 0, 1703968, 0, 0, 1703977, 0, 0, 1703990, 0, 0, 1703999, 0, 0, 1704000, 0, 0, 1704001, 0, 0, 1704002, 0, 0, 1704003, 0, 0, 1704004, 0, 0, 1704005, 0, 0, 1769497, 6, 0, 1769498, 6, 0, 1769499, 0, 0, 1769500, 0, 0, 1769501, 0, 0, 1769502, 0, 0, 1769503, 0, 0, 1769504, 0, 0, 1769511, 0, 0, 1769512, 0, 0, 1769513, 0, 0, 1769526, 0, 0, 1769527, 0, 0, 1769528, 0, 0, 1769533, 1073741866, 0, 1769535, 0, 0, 1769536, 0, 0, 1769537, 0, 0, 1769538, 0, 0, 1769539, 0, 0, 1769540, 0, 0, 1769541, 0, 0, 1835033, 6, 0, 1835034, 6, 0, 1835035, 0, 0, 1835036, 0, 0, 1835037, 0, 0, 1835038, 0, 0, 1835039, 0, 0, 1835040, 0, 0, 1835071, 0, 0, 1835072, 0, 0, 1835073, 0, 0, 1835074, 0, 0, 1835075, 0, 0, 1835076, 0, 0, 1835077, 0, 0, 1900569, 6, 0, 1900570, 6, 0, 1900571, 0, 0, 1900572, 0, 0, 1900573, 0, 0, 1900574, 0, 0, 1900575, 0, 0, 1900576, 0, 0, 1900607, 0, 0, 1900608, 0, 0, 1900609, 0, 0, 1900610, 0, 0, 1900611, 0, 0, 1900612, 0, 0, 1900613, 0, 0, 1966105, 6, 0, 1966106, 6, 0, 1966107, 0, 0, 1966108, 0, 0, 1966109, 0, 0, 1966110, 0, 0, 1966111, 0, 0, 1966112, 0, 0, 1966143, 0, 0, 1966144, 0, 0, 1966145, 0, 0, 1966146, 0, 0, 1966147, 0, 0, 1966148, 0, 0, 1966149, 0, 0, 2031641, 6, 0, 2031642, 6, 0, 2031643, 0, 0, 2031644, 0, 0, 2031645, 0, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031651, 0, 0, 2031652, 0, 0, 2031660, 0, 0, 2031661, 0, 0, 2031666, 536870922, 0, 2031667, 0, 0, 2031668, 0, 0, 2031675, 0, 0, 2031676, 0, 0, 2031679, 0, 0, 2031680, 0, 0, 2031681, 0, 0, 2031682, 0, 0, 2031683, 0, 0, 2031684, 0, 0, 2031685, 0, 0, 2097177, 6, 0, 2097178, 6, 0, 2097179, 0, 0, 2097180, 0, 0, 2097181, 0, 0, 2097182, 0, 0, 2097183, 0, 0, 2097184, 0, 0, 2097188, 0, 0, 2097189, 0, 0, 2097190, 0, 0, 2097209, 0, 0, 2097210, 0, 0, 2097211, 0, 0, 2097215, 0, 0, 2097216, 0, 0, 2097217, 0, 0, 2097218, 0, 0, 2097219, 0, 0, 2097220, 0, 0, 2097221, 0, 0, 2162713, 6, 0, 2162714, 6, 0, 2162715, 0, 0, 2162716, 0, 0, 2162717, 0, 0, 2162718, 0, 0, 2162719, 0, 0, 2162720, 0, 0, 2162751, 0, 0, 2162752, 0, 0, 2162753, 0, 0, 2162754, 0, 0, 2162755, 0, 0, 2162756, 0, 0, 2162757, 0, 0, 2228249, 6, 0, 2228250, 6, 0, 2228251, 0, 0, 2228252, 0, 0, 2228253, 0, 0, 2228254, 0, 0, 2228255, 0, 0, 2228256, 0, 0, 2228287, 0, 0, 2228288, 0, 0, 2228289, 0, 0, 2228290, 0, 0, 2228291, 0, 0, 2228292, 0, 0, 2228293, 0, 0, 2293785, 6, 0, 2293786, 6, 0, 2293787, 0, 0, 2293788, 0, 0, 2293789, 0, 0, 2293790, 0, 0, 2293791, 0, 0, 2293792, 0, 0, 2293793, 2, 0, 2293794, 1, 0, 2293795, 2, 0, 2293796, 1, 0, 2293797, 2, 0, 2293798, 1, 0, 2293799, 2, 0, 2293800, 1, 0, 2293801, 2, 0, 2293802, 1, 0, 2293803, 2, 0, 2293804, 1, 0, 2293805, 2, 0, 2293806, 1, 0, 2293807, 2, 0, 2293808, 1, 0, 2293809, 2, 0, 2293810, 1, 0, 2293811, 2, 0, 2293812, 1, 0, 2293813, 2, 0, 2293814, 1, 0, 2293815, 2, 0, 2293816, 1, 0, 2293817, 2, 0, 2293818, 1, 0, 2293819, 2, 0, 2293820, 1, 0, 2293821, 2, 0, 2293822, 1, 0, 2293823, 0, 0, 2293824, 0, 0, 2293825, 0, 0, 2293826, 0, 0, 2293827, 0, 0, 2293828, 0, 0, 2293829, 0, 0, 2359321, 6, 0, 2359322, 6, 0, 2359323, 0, 0, 2359324, 0, 0, 2359325, 0, 0, 2359326, 0, 0, 2359327, 0, 0, 2359328, 0, 0, 2359359, 0, 0, 2359360, 0, 0, 2359361, 0, 0, 2359362, 0, 0, 2359363, 0, 0, 2359364, 0, 0, 2359365, 0, 0, 2424857, 6, 0, 2424858, 6, 0, 2424859, 0, 0, 2424860, 0, 0, 2424861, 0, 0, 2424862, 0, 0, 2424863, 0, 0, 2424864, 0, 0, 2424865, 0, 0, 2424866, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424870, 0, 0, 2424871, 0, 0, 2424872, 0, 0, 2424873, 0, 0, 2424874, 0, 0, 2424875, 0, 0, 2424876, 0, 0, 2424877, 0, 0, 2424878, 0, 0, 2424879, 0, 0, 2424880, 0, 0, 2424881, 0, 0, 2424882, 0, 0, 2424883, 0, 0, 2424884, 0, 0, 2424885, 0, 0, 2424886, 0, 0, 2424887, 0, 0, 2424888, 0, 0, 2424889, 0, 0, 2424890, 0, 0, 2424891, 0, 0, 2424892, 0, 0, 2424893, 0, 0, 2424894, 0, 0, 2424895, 0, 0, 2424896, 0, 0, 2424897, 0, 0, 2424898, 0, 0, 2424899, 0, 0, 2424900, 0, 0, 2424901, 0, 0, 2490393, 6, 0, 2490394, 6, 0, 2490395, 0, 0, 2490396, 0, 0, 2490397, 0, 0, 2490398, 0, 0, 2490399, 0, 0, 2490400, 0, 0, 2490401, 0, 0, 2490402, 0, 0, 2490403, 0, 0, 2490404, 0, 0, 2490405, 0, 0, 2490406, 0, 0, 2490407, 0, 0, 2490408, 0, 0, 2490409, 0, 0, 2490410, 0, 0, 2490411, 0, 0, 2490412, 0, 0, 2490413, 0, 0, 2490414, 0, 0, 2490415, 0, 0, 2490416, 0, 0, 2490417, 0, 0, 2490418, 0, 0, 2490419, 0, 0, 2490420, 0, 0, 2490421, 0, 0, 2490422, 0, 0, 2490423, 0, 0, 2490424, 0, 0, 2490425, 0, 0, 2490426, 0, 0, 2490427, 0, 0, 2490428, 0, 0, 2490429, 0, 0, 2490430, 0, 0, 2490431, 0, 0, 2490432, 0, 0, 2490433, 0, 0, 2490434, 0, 0, 2490435, 0, 0, 2490436, 0, 0, 2490437, 0, 0, 2555929, 6, 0, 2555930, 6, 0, 2555931, 0, 0, 2555932, 0, 0, 2555933, 0, 0, 2555934, 0, 0, 2555935, 0, 0, 2555936, 0, 0, 2555937, 0, 0, 2555938, 0, 0, 2555939, 0, 0, 2555940, 0, 0, 2555941, 0, 0, 2555942, 0, 0, 2555943, 0, 0, 2555944, 0, 0, 2555945, 0, 0, 2555946, 0, 0, 2555947, 0, 0, 2555948, 0, 0, 2555949, 0, 0, 2555950, 0, 0, 2555951, 0, 0, 2555952, 0, 0, 2555953, 0, 0, 2555954, 0, 0, 2555955, 0, 0, 2555956, 0, 0, 2555957, 0, 0, 2555958, 0, 0, 2555959, 0, 0, 2555960, 0, 0, 2555961, 0, 0, 2555962, 0, 0, 2555963, 0, 0, 2555964, 0, 0, 2555965, 0, 0, 2555966, 0, 0, 2555967, 0, 0, 2555968, 0, 0, 2555969, 0, 0, 2555970, 0, 0, 2555971, 0, 0, 2555972, 0, 0, 2555973, 0, 0, 2621465, 6, 0, 2621466, 6, 0, 2621467, 0, 0, 2621468, 0, 0, 2621469, 0, 0, 2621470, 0, 0, 2621471, 0, 0, 2621472, 0, 0, 2621473, 0, 0, 2621474, 0, 0, 2621475, 0, 0, 2621476, 0, 0, 2621477, 0, 0, 2621478, 0, 0, 2621479, 0, 0, 2621480, 0, 0, 2621481, 0, 0, 2621482, 0, 0, 2621483, 0, 0, 2621484, 0, 0, 2621485, 0, 0, 2621486, 0, 0, 2621487, 0, 0, 2621488, 0, 0, 2621489, 0, 0, 2621490, 0, 0, 2621491, 0, 0, 2621492, 0, 0, 2621493, 0, 0, 2621494, 0, 0, 2621495, 0, 0, 2621496, 0, 0, 2621497, 0, 0, 2621498, 0, 0, 2621499, 0, 0, 2621500, 0, 0, 2621501, 0, 0, 2621502, 0, 0, 2621503, 0, 0, 2621504, 0, 0, 2621505, 0, 0, 2621506, 0, 0, 2621507, 0, 0, 2621508, 0, 0, 2621509, 0, 0, 2687001, 6, 0, 2687002, 6, 0, 2687003, 0, 0, 2687004, 0, 0, 2687005, 0, 0, 2687006, 0, 0, 2687007, 0, 0, 2687008, 0, 0, 2687009, 0, 0, 2687010, 0, 0, 2687011, 0, 0, 2687012, 0, 0, 2687013, 0, 0, 2687014, 0, 0, 2687015, 0, 0, 2687016, 0, 0, 2687017, 0, 0, 2687018, 0, 0, 2687019, 0, 0, 2687020, 0, 0, 2687021, 0, 0, 2687022, 0, 0, 2687023, 0, 0, 2687024, 0, 0, 2687025, 0, 0, 2687026, 0, 0, 2687027, 0, 0, 2687028, 0, 0, 2687029, 0, 0, 2687030, 0, 0, 2687031, 0, 0, 2687032, 0, 0, 2687033, 0, 0, 2687034, 0, 0, 2687035, 0, 0, 2687036, 0, 0, 2687037, 0, 0, 2687038, 0, 0, 2687039, 0, 0, 2687040, 0, 0, 2687041, 0, 0, 2687042, 0, 0, 2687043, 0, 0, 2687044, 0, 0, 2687045, 0, 0, 2752539, 0, 0, 2752540, 0, 0, 2752541, 0, 0, 2752542, 0, 0, 2752543, 0, 0, 2752544, 0, 0, 2752545, 0, 0, 2752546, 0, 0, 2752547, 0, 0, 2752548, 0, 0, 2752549, 0, 0, 2752550, 0, 0, 2752551, 0, 0, 2752552, 0, 0, 2752553, 0, 0, 2752554, 0, 0, 2752555, 0, 0, 2752556, 0, 0, 2752557, 0, 0, 2752558, 0, 0, 2752559, 0, 0, 2752560, 0, 0, 2752561, 0, 0, 2752562, 0, 0, 2752563, 0, 0, 2752564, 0, 0, 2752565, 0, 0, 2752566, 0, 0, 2752567, 0, 0, 2752568, 0, 0, 2752569, 0, 0, 2752570, 0, 0, 2752571, 0, 0, 2752572, 0, 0, 2752573, 0, 0, 2752574, 0, 0, 2752575, 0, 0, 2752576, 0, 0, 2752577, 0, 0, 2752578, 0, 0, 2752579, 0, 0, 2752580, 0, 0, 2752581, 0, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 766.746, 451.745 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Player_one_ui" type="Node2D" parent="Control"]
editor/display_folded = true

[node name="heart" type="Sprite" parent="Control/Player_one_ui"]
position = Vector2( 625.568, 583.483 )
scale = Vector2( 0.728299, 0.557817 )
texture = ExtResource( 6 )

[node name="bubble" type="Sprite" parent="Control/Player_one_ui"]
position = Vector2( 625.223, 594.117 )
scale = Vector2( 0.283735, 0.303778 )
texture = ExtResource( 7 )

[node name="player_health" type="Label" parent="Control/Player_one_ui"]
margin_left = 633.281
margin_top = 577.853
margin_right = 756.281
margin_bottom = 646.853
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 49 )
text = "100%"

[node name="player_Shield" type="Label" parent="Control/Player_one_ui"]
margin_left = 632.901
margin_top = 589.415
margin_right = 755.901
margin_bottom = 730.415
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 49 )
text = "0
"

[node name="Player_two_ui" type="Node2D" parent="Control"]
editor/display_folded = true
position = Vector2( 47.1116, 0.741024 )

[node name="heart" type="Sprite" parent="Control/Player_two_ui"]
position = Vector2( 625.568, 583.483 )
scale = Vector2( 0.728299, 0.557817 )
texture = ExtResource( 6 )

[node name="bubble" type="Sprite" parent="Control/Player_two_ui"]
position = Vector2( 625.223, 594.117 )
scale = Vector2( 0.283735, 0.303778 )
texture = ExtResource( 7 )

[node name="player_health" type="Label" parent="Control/Player_two_ui"]
margin_left = 633.281
margin_top = 577.853
margin_right = 756.281
margin_bottom = 646.853
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 49 )
text = "100%"

[node name="player_Shield" type="Label" parent="Control/Player_two_ui"]
margin_left = 632.901
margin_top = 589.415
margin_right = 755.901
margin_bottom = 730.415
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 49 )
text = "0
"

[node name="Player_three_ui" type="Node2D" parent="Control"]
editor/display_folded = true
visible = false
position = Vector2( 91.1471, 1.1239 )

[node name="heart" type="Sprite" parent="Control/Player_three_ui"]
position = Vector2( 625.568, 583.483 )
scale = Vector2( 0.728299, 0.557817 )
texture = ExtResource( 6 )

[node name="bubble" type="Sprite" parent="Control/Player_three_ui"]
position = Vector2( 625.223, 594.117 )
scale = Vector2( 0.283735, 0.303778 )
texture = ExtResource( 7 )

[node name="player_health" type="Label" parent="Control/Player_three_ui"]
margin_left = 633.281
margin_top = 577.853
margin_right = 756.281
margin_bottom = 646.853
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 49 )
text = "100%"

[node name="player_Shield" type="Label" parent="Control/Player_three_ui"]
margin_left = 632.901
margin_top = 589.415
margin_right = 755.901
margin_bottom = 730.415
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 49 )
text = "0
"

[node name="Player_four_ui" type="Node2D" parent="Control"]
editor/display_folded = true
visible = false
position = Vector2( 135.183, 1.1239 )

[node name="heart" type="Sprite" parent="Control/Player_four_ui"]
position = Vector2( 625.568, 583.483 )
scale = Vector2( 0.728299, 0.557817 )
texture = ExtResource( 6 )

[node name="bubble" type="Sprite" parent="Control/Player_four_ui"]
position = Vector2( 625.223, 594.117 )
scale = Vector2( 0.283735, 0.303778 )
texture = ExtResource( 7 )

[node name="player_health" type="Label" parent="Control/Player_four_ui"]
margin_left = 633.281
margin_top = 577.853
margin_right = 756.281
margin_bottom = 646.853
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 49 )
text = "100%"

[node name="player_Shield" type="Label" parent="Control/Player_four_ui"]
margin_left = 632.901
margin_top = 589.415
margin_right = 755.901
margin_bottom = 730.415
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 49 )
text = "0
"

[node name="time_left_label" type="Label" parent="Control"]
margin_left = 705.302
margin_top = 301.984
margin_right = 827.302
margin_bottom = 370.984
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 50 )
custom_colors/font_color = Color( 0.85098, 0.188235, 0.188235, 1 )
text = "Time:"
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
